--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -8,6 +9,7 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
+
         applicationId "com.example.betak"
         minSdkVersion 19
         targetSdkVersion 30
@@ -30,15 +32,26 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dataBinding{
+        enabled = true
+    }
 }
 
 dependencies {
 
+     //kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    //core kotlin
     implementation 'androidx.core:core-ktx:1.3.1'
+    //appcompat
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    //material
     implementation 'com.google.android.material:material:1.2.0'
+    //constraintLayout
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    //viewPager
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-rc01'
+    //testing
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
