--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
+
 }
 
 android {
@@ -11,7 +13,7 @@ android {
     defaultConfig {
 
         applicationId "com.example.betak"
-        minSdkVersion 19
+        minSdkVersion 28
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -51,8 +53,26 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     //viewPager
     implementation 'androidx.viewpager2:viewpager2:1.0.0-rc01'
+
+    //lifeCycle
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+
+    //circleImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.google.firebase:firebase-firestore:21.5.0'
+
+    //pinView
+    implementation 'com.github.GoodieBag:Pinview:v1.4'
+
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_kotlin_coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_kotlin_coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1"
+    implementation 'com.google.firebase:firebase-auth:19.3.2'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
     //testing
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
+//apply plugin: 'com.google.gms.google-services'
