--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.betak">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,13 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Betak">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.activity.EmFilterActivity"></activity>
+        <activity android:name=".ui.activity.EmloyeesActivity" />
+        <activity android:name=".ui.activity.EnterCodeActivity" />
+        <activity android:name=".ui.activity.FilterActivity" />
+        <activity android:name=".ui.activity.ProfileActivity" />
+        <activity android:name=".ui.activity.DashboardActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activity.SignUpActivity" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
