--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'com.google.gms.google-services'
+   // id 'com.google.gms.google-services'
 
 }
 
@@ -57,22 +57,61 @@ dependencies {
     //lifeCycle
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
+    //messaging
+    implementation 'com.google.firebase:firebase-messaging:20.1.4'
+
+    implementation 'com.google.firebase:firebase-analytics:18.0.3'
+
     //circleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.firebase:firebase-firestore:21.5.0'
 
     //pinView
     implementation 'com.github.GoodieBag:Pinview:v1.4'
+    //spots dialoge
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
 
+    //material
+    implementation 'com.google.android.material:material:1.0.0'
+    //sms retriever
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'org.apache.commons:commons-lang3:3.11'
+    implementation 'org.greenrobot:eventbus:3.2.0'
+    //eventBus
+    implementation 'org.greenrobot:eventbus:3.2.0'
+    //dexter
+    implementation 'com.karumi:dexter:5.0.0'
+    //sms listner
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'org.apache.commons:commons-lang3:3.11'
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_kotlin_coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_kotlin_coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1"
+
     implementation 'com.google.firebase:firebase-auth:19.3.2'
-    implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'com.google.firebase:firebase-storage:19.2.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.navigation:navigation-fragment:2.3.2'
+    implementation 'androidx.navigation:navigation-ui:2.3.2'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.2'
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
+    implementation 'com.google.android.libraries.places:places:2.4.0'
+    //notification badge
+    implementation 'com.nex3z:notification-badge:1.0.2'
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
     //testing
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
-//apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'
