--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/employee"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Betak">
-        <activity android:name=".ui.activity.NotificationActivity"></activity>
+        <activity android:name=".ui.activity.MyChatsActivity"></activity>
+        <activity android:name=".ui.activity.NotificationActivity" />
         <activity android:name=".ui.activity.ChatActivity" />
         <activity
             android:name=".ui.activity.MeProfileActivity"
@@ -27,8 +28,7 @@
         <activity android:name=".ui.activity.EnterCodeActivity" />
         <activity android:name=".ui.activity.FilterActivity" />
         <activity android:name=".ui.activity.PublicProfileActivity" />
-        <activity android:name=".ui.activity.DashboardActivity">
-        </activity>
+        <activity android:name=".ui.activity.DashboardActivity"></activity>
 
         <receiver
             android:name=".model.utils.SmsBroadcastReceiver"
@@ -46,15 +46,13 @@
         </service>
 
         <activity android:name=".ui.activity.SignUpActivity" />
-
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
